# translation-compression

./: .gitignore  pyproject.toml  sweep_autoscaler.py  sweep_runner.py  train.py
config/: bio-synthetic-augmented-1comp.toml  bio-synthetic-augmented-2comp.toml  bio-synthetic-augmented-4comp.toml  bio-synthetic-augmented-qa10-1comp.toml  bio-synthetic-augmented-qa10-4comp.toml  bio-synthetic-rope-bpe16384.toml  english-baseline-rope-bpe16384-8-128.toml  english-baseline-rope-bpe16384-8-256.toml  english-baseline-rope-bpe16384-8-32.toml  english-baseline-rope-bpe16384-8-64.toml  english-copyemb-2comp-rope-bpe16384-8-128.toml  english-copyemb-2comp-rope-bpe16384-8-256.toml  english-copyemb-2comp-rope-bpe16384-8-32.toml  english-copyemb-2comp-rope-bpe16384-8-64.toml  english-copyemb-8comp-rope-bpe16384-8-256.toml  english-frequency-2comp-rope-bpe16384-8-256.toml  english-uniform-2comp-rope-bpe16384-8-256.toml  russian-2comp-baseline-rope-bpe16384-8-256.toml  russian-4comp-baseline-rope-bpe16384-8-256.toml  russian-baseline-rope-bpe16384-8-256.toml  russian-english-baseline-rope-bpe16384-8-256.toml  sweep-base-absolute-translation-ratio.toml  sweep-base-bpe16384-absolute.toml  sweep-base-bpe16384-token-tying.toml  sweep-base-bpe16384.toml  sweep-base-bpe4096-absolute-translation-ratio.toml  sweep-base-densely-sweep-translation-ratio.toml  sweep-base-fineweb.toml  sweep-base-uniform-absolute-translation-ratio.toml  sweep-no-permute-inputs-fineweb.toml
data/: fineweb.py
experiment/: finetune_first_last.py  permutation_learning.py  permutation_undo_repr.py  (+2 more)
src/: dann.py  (+6 more)
(+25 files in other folders)
